# zeldust

./: .rustfmt.toml  Cargo.toml  README.md
assets/: sprites.tps
assets/map/: map_FloorBlocks.csv
assets/textures/: grass.ftpp  grass.json  magics.ftpp  magics.json  monsters.ftpp  monsters.json  objects.ftpp  objects.json  particles.ftpp  particles.json  player.ftpp  player.json  weapons.ftpp  weapons.json
assets/tiles/: player.ron  player_down_idle.ron  player_down_moving.ron  player_left_idle.ron  player_left_moving.ron  player_right_idle.ron  player_right_moving.ron  player_up.ron  player_up_idle.ron  player_up_moving.ron  rock.ron
assets/tilesets/: player.ron  test.ron
src/: camera.rs  clamped.rs  collisions.rs  constants.rs  debug.rs  enemies.rs  events.rs  frames.rs  input.rs  layer.rs  magic.rs  main.rs  map.rs  particles.rs  player.rs  settings.rs  stats.rs  ui.rs  weapon.rs
src/entities/: enemies.rs  mod.rs  player.rs
src/screens/: mod.rs
src/screens/game/: input.rs  mod.rs
src/screens/upgrade/: input.rs  mod.rs  ui.rs
src/widgets/: mod.rs  ui_atlas_image.rs
