[package]
name = "zelda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"

[dependencies]
bevy = { version = "0.6", features = ["dynamic"] }
bevy_tileset_tiles = "0.3"
bevy_tileset = "0.3"
