[package]
name = "zelda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10"
bevy-inspector-egui = "0.18"
bevy_tileset = "0.6"
bevy_prototype_lyon = "0.8"
csv = "1.1"
rand = "0.8.5"
bevy_rapier2d = "0.21.0"

[profile.dev.package."*"]
opt-level = 3
