[package]
name = "zelda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bevy = "0.10"
bevy_common_assets = { version = "0.6", features = ["json"] }
bevy-inspector-egui = "0.18"
bevy_rapier2d = "0.21"
bevy_prototype_lyon = "0.8"
csv = "1.1"
parse-display = "0.8"
rand = "0.8.5"
serde = "1.0"
serde_json = "1.0"
enum-iterator = "1.4"
lazy_static = "1.4"

[profile.dev.package."*"]
opt-level = 3
